# Copyright (c) 2022 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/pigweed.gni")
import("//build_overrides/chip.gni")
import("${chip_root}/src/platform/device.gni")

declare_args() {
  chip_build_pw_trace_lib = false
  chip_matter_custom_trace = false
}

config("config") {
  defines = [ "PW_TRACE_BACKEND_SET" ]
}

config("configuration"){
  defines = [ "MATTER_CUSTOM_TRACE" ]
}
source_set("trace") {
  sources = [
    "trace.cpp",
    "trace.h",
  ]
  if (chip_build_pw_trace_lib) {
    public_configs = [ ":config" ]
    public_deps = [ "${dir_pigweed}/pw_trace" ]
  }
  if (chip_device_platform == "esp32" && chip_matter_custom_trace) {
     public_configs = [ ":configuration"]
     sources += [
         "${chip_root}/src/platform/ESP32/MatterCustomTrace.h",
         "${chip_root}/src/platform/ESP32/MatterCustomTrace.cpp"
     ]
     deps = ["${chip_root}/src/system"]
  }
}
